Added option for GPU/cuda

--- a/Brain_Tumour_Classifier.ipynb
+++ b/Brain_Tumour_Classifier.ipynb
@@ -300,8 +300,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ToDo: Evaluate model "
+    "#Cuda if GPU is available\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "#CPU tensor\n",
+    "cpu_tensor = torch.rand(10).to(device)\n",
+    "#Moving same tensor to GPU\n",
+    "gpu_tensor = cpu_tensor.to(device)\n",
+    "\n",
+    "print(cpu_tensor, cpu_tensor.dtype, type(cpu_tensor), cpu_tensor.type())\n",
+    "print(gpu_tensor, gpu_tensor.dtype, type(gpu_tensor), gpu_tensor.type())\n",
+    "\n",
+    "print(cpu_tensor*gpu_tensor)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86bbf249-ecee-45c6-a490-7adebc7759ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ToDo: Evaluate model\n",
+    "mri_dataset = MRI()\n",
+    "mri_dataset.normalize()\n",
+    "device = torch.device('cuda:0')\n",
+    "model = CNN().to(device)\n",
+    "\n",
+    "dataloader = DataLoader(mri_dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "model.eval()\n",
+    "outputs = []\n",
+    "y_true = []\n",
+    "with torch.no_grad():\n",
+    "    for D in dataloader:\n",
+    "        image = D['image'].to(device)\n",
+    "        label = D['label'].to(device)\n",
+    "\n",
+    "        y_hat = model(image)\n",
+    "\n",
+    "        outputs.append(y_hat.cpu().detach().numpy())\n",
+    "        y_true.append(label.cpu().detach().numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c8b5385-59a4-425e-beb0-78df938d211d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ToDo: accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9fbeb96-fe48-4017-b3cc-04266adcb946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ToDo: confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c7f400a-4454-4057-a97b-881703a7e4f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ToDo: Visualise the Feature Maps of the Convolutional Filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb64963e-25e0-444f-b837-fa85438ebc08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
